<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- String del Layout -->
    <string name="app_name">Da Weather</string>
    <string name="descripcionImagen">Actual weather</string>
    <string name="grado">Degrees</string>
    <string name="ciudadUndefined">No data available</string>
    <string name="climaUndefined">No data</string>
    <string name="tempUndefined">0º F</string>
    <string name="probUndefined">0%</string>
    <string name="clima_diario">Daily Weather</string>
    <string name="pronostico_para_la_semana">Summary of the week</string>

    <!-- String del procedimiento-->
    <string name="tempPlaceholder">%dº F</string>
    <string name="probPlaceholder">%d %%</string>
    <string name="temp_min">Min: %dº</string>
    <string name="temp_max">Max: %dº</string>

    <!-- String de la App -->
    <string name="clear_day">Clear</string>
    <string name="clear_night">Clear night</string>
    <string name="cloudy">Cloudy</string>
    <string name="fog">Fog</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="partly_cloudy_day">Partly cloudy</string>
    <string name="partly_cloudy_night">Partly cloudy night</string>
    <string name="rain">Rain</string>
    <string name="sleet">Sleet</string>
    <string name="snow">Snow</string>
    <string name="sunny">Sunny</string>
    <string name="wind">Wind</string>
    <string name="temperatura">Temperature</string>
    <string name="probabilidad">Probability</string>
    <string name="diario">Dairy weather</string>
    <string name="horas">Hourly weather</string>
    <string name="dia1">Monday</string>
    <string name="dia2">Tuesday</string>
    <string name="dia3">Wednesday</string>
    <string name="dia4">Thursday</string>
    <string name="dia5">Friday</string>
    <string name="dia6">Saturday</string>
    <string name="dia7">Sunday</string>

    <!-- String de configuracion -->
    <string name="locale">en</string>
    <string name="units">auto</string>

    <!-- String de errores -->
    <string name="error">Sorry an error occurred.</string>
    <string name="reintentar">Retry?</string>
    <string name="Sin_Datos">Sorry, we don\'t have any data to show</string>
    <string name="clima_horario">Hourly Weather</string>
    <string name="pronostico_horas">Summary of the Day</string>
</resources>
